chore(airflow): persist postgres_dbt connection and clear Cosmos profile on startup; update README

--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -18,12 +18,18 @@ models:
     staging:
       +schema: staging
       +materialized: view
+      +tags:
+        - daily
     intermediate:
       +schema: intermediate
       +materialized: view
+      +tags:
+        - daily
     marts:
       +schema: gold
       +materialized: table
+      +tags:
+        - daily
 
 
 seeds:  
@@ -34,3 +40,11 @@ seeds:
 snapshots:  
   assurance_learn:
     +schema: snapshots
+    +tags:
+      - weekly
+
+
+tests:
+  assurance_learn:
+    +store_failures: true
+    +schema: test_failures
