--- a/models/marts/_models.yml
+++ b/models/marts/_models.yml
@@ -7,13 +7,16 @@ models:
       - name: client_id
         description: "Clé primaire"
         tests:
-          - unique
-          - not_null
+          - unique:
+               severity: error
+          - not_null:
+               severity: error
       - name: segment
         description: "Segment commercial"
         tests:
           - accepted_values:
               values: ['Gold', 'Silver', 'Bronze']
+              severity: warn
 
   - name: fct_contrats
     description: "Table de faits contrats"
@@ -21,11 +24,14 @@ models:
       - name: contrat_id
         description: "Clé primaire"
         tests:
-          - unique
-          - not_null
+          - unique:
+              severity: error
+          - not_null:
+              severity: error
       - name: client_id
         tests:
-          - not_null
+          - not_null:
+              severity: error
 
   - name: fct_sinistres
     description: "Table de faits sinistres"
@@ -33,8 +39,11 @@ models:
       - name: sinistre_id
         description: "Clé primaire"
         tests:
-          - unique
-          - not_null
+          - unique:
+              severity: error
+          - not_null:
+              severity: warn
       - name: contrat_id
         tests:
-          - not_null
+          - not_null:
+               severity: error
