ci(dbt): cast DBT_PORT to int in profiles.yml to satisfy dbt profile schema

--- a/profiles.yml
+++ b/profiles.yml
@@ -4,7 +4,7 @@ assurance_learn:
     dev:
       type: postgres
       host: '{{ env_var("DBT_HOST", "host.docker.internal") }}'
-      port: '{{ env_var("DBT_PORT", 5432) }}'
+      port: {{ env_var("DBT_PORT", "5432") | int }}
       user: '{{ env_var("DBT_USER", "postgres") }}'
       password: '{{ env_var("DBT_PASSWORD", "dbt") }}'
       dbname: '{{ env_var("DBT_DBNAME", "dbt_learn") }}'
