--- a/.github/workflows/dbt-ci.yml
+++ b/.github/workflows/dbt-ci.yml
@@ -93,6 +93,9 @@ jobs:
           # Avoid pinning dbt-postgres to a version that may not be published on PyPI
           pip install dbt-core==1.11.2 dbt-postgres
 
+      - name: Install dbt packages
+        run: dbt deps --profiles-dir ~/.dbt
+
       - name: Run dbt seed
         working-directory: ./
         run: |
